<resources>
    <string name="app_name" translatable="false">Palco Pet</string>
    <string name="store_name" translatable="false">Palco Pet</string>
    <string name="deeplinking_host" translatable="false">demo.webkul.com</string>
    <string name="home">Home</string>
    <string name="powered_by_mobikul">Powered by Tajr</string>
    <string name="facebook_app_id" translatable="false">dummy</string>
    <string name="fb_login_protocol_scheme" translatable="false">dummy</string>
    <string name="email_ex" translatable="false">\@palcopet.ps</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">dummy</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">dummy</string>
    <string name="signup_text_on_sign_in_page"><![CDATA[New in Mobikul. <font color="#55D6BE">SIGN-UP</font> now.]]></string>
    <string name="signin_text_on_sign_up_page"><![CDATA[Already have an account.  <font color="#55D6BE">SIGN-IN</font> now.]]></string>
    <string name="mobikul" translatable="false">Mobikul</string>
    <string name="search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="categories">Categories</string>
    <string name="price">Price</string>
    <string name="customer">Customer</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share App</string>
    <string name="more">More</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="quantity">quantity</string>
    <string name="choose_an_action">Choose an Action:</string>
    <string name="notification">Notification</string>
    <string name="bag">Bag</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="view_all">View All</string>
    <string name="please_wait">Please wait…</string>
    <string name="press_back_to_exit">Press Back again to Exit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="error">Error</string>
    <string name="error_request_failed">Request Failed, Please try again</string>
    <string name="error_request_timeout">Request Failed, Please try again</string>
    <string name="error_no_network_cross_check_connection">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="error_is_required">is required !</string>
    <string name="error_enter_valid_email">Please Enter a Valid Email!</string>
    <string name="error_password_length_x">must have at least %d characters.</string>
    <string name="error_enter_valid_login_details">Please enter valid login details</string>
    <string name="plese_accept_tnc">Please accept the Terms and Condition.</string>
    <string name="error_login_failure">Login Failure</string>
    <string name="error_cant_perform_operation">Cannot perform this operation at this time!</string>
    <string name="error_fill_req_field">Please fill the required field!</string>
    <string name="error_this_is_a_required_field">This is a required field.</string>
    <string name="error_network_unavailble">Network Unavailable</string>
    <string name="error_please_provide_permission_to_pick_location">Please provide permission to view pick location</string>
    <string name="error_enable_location_of_device">Please enable location of your device</string>
    <string name="error_could_get_location_at_this_point">Could not get your location at this point</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_could_not_add_to_bag_pls_try_again">Could not add item to the bag Please try again later.</string>
    <string name="error_could_not_add_to_wishlist_pls_try_again">Could not add item to the wishlist. Please try again later.</string>
    <string name="error_no_shipping_method_chosen">Please specify shipping method.</string>
    <string name="error_no_payment_method_chosen">Please specify payment method.</string>
    <string name="error_permision_required_to_change_profile_image">Please provide required permission to change profile image</string>
    <string name="error_in_changing_profile_image">Something went wrong in uploading profile image to server. Please try again after some time</string>
    <string name="error_please_login_to_continue">Please login to continue</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_invalid_card_number">Please enter valid card number</string>
    <string name="error_invalid_cvv">Please enter valid cvv number</string>
    <string name="error_invalid_date">Please enter valid date</string>
    <string name="error_invalid_card_details">Please enter valid card details</string>
    <string name="error_order_place">Could not place order at this moment, please try again after some time</string>
    <string name="error_inappropriate_details">Please provide the appropriate details</string>
    <string name="error_default_address_not_found">Default Address not found !</string>
    <string name="error_failed_to_connect_google">Failed to connect Google. Please try again.</string>
    <string name="error_billing_address_not_configured">Billing address is not configured, please select edit to set up your address</string>
    <string name="error_google_sign_in">Could not perform sign in via Google. Please try again.</string>
    <string name="error_twitter_sign_in">Could not perform sign in via Twitter. Please try again.</string>
    <string name="error_in_zip_code">Please enter valid zip code.</string>
    <string name="msg_are_you_sure">Are you sure ?</string>
    <string name="account_created_successfully">Account created…</string>
    <string name="msg_want_to_delete_this_address">You want to delete this address ?</string>
    <string name="question_want_to_empty_bag">You want to empty your bag?</string>
    <string name="question_add_new_address_to_place_order">Add a new address to place order ?</string>
    <string name="message_yes_delete_it">Yes, Delete it</string>
    <string name="message_deleted">Deleted</string>
    <string name="ques_want_to_delete_this_product">Do you want to delete this product?</string>
    <string name="this_is_a_demo_store">This is a demo store.</string>
    <string name="any_orders_placed_from_this_store_will_not_be_honored_or_fullfilled">Any orders placed from this store will not be honored or fulfilled</string>
    <string name="odoo">Odoo</string>
    <string name="title_update_app">Update Available !</string>
    <string name="new_version_available_X">There is a newer version of %s application available, click OK to upgrade now ?</string>
    <string name="remind_later">Remind Later</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="email_or_username">Email/Username</string>
    <string name="write_your_email_here">Write your email here</string>
    <string name="write_your_email_or_username_here">Write your email or username here</string>
    <string name="password">Password</string>
    <string name="write_your_password_here">Write your password here</string>
    <string name="forget_password_heading">Forget Password…?</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="please_enter_your_email_address_below_you_will_receive_a_link_to_reset_your_password_">Please enter your email address below. You will receive a link to reset your password.</string>
    <string name="link_to_resend_login_password_send">Link Send</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="e_g_john_doe">e.g. John Doe</string>
    <string name="login_successful_message">Login Successful</string>
    <string name="skip">Skip</string>
    <string name="use_email_address">Use Email Address</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_telephone_no">Enter phone no</string>
    <string name="enter_street_address">Enter Street address</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_postal_code">Enter Zip/PostalCode</string>
    <string name="enter_your_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="error_fb_sign_in">Could not perform sign in via Facebook. Please try again.</string>
    <string name="view_term_and_cond">View Terms and Conditions</string>
    <string name="i_agree_with_term_and_condition">I agree with Terms and Conditions</string>
    <string name="dashboard">Dashboard</string>
    <string name="account_info">Account Info</string>
    <string name="address_book">Address Book</string>
    <string name="sign_out">Sign out</string>
    <string name="hello_x_">Hello %s !</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="camera_pick">Pick from Camera</string>
    <string name="select_file">Select File</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="upload_banner_image">Upload Banner Image</string>
    <string name="deactivate_account">Deactivate your Account Temporary/Permanent</string>
    <string name="deactivate_temporary">Deactivate Temporary</string>
    <string name="deactivate_permanent">Deactivate Permanent</string>
    <string name="deactivate">Deactivate</string>
    <string name="want_to_deactivate_account">Do you want to deactivate your account %1$s ?</string>
    <string name="download_data">Download all information</string>
    <string name="download">Download</string>
    <string name="download_request">Download Request</string>
    <string name="x_results_found">%d Results Found</string>
    <string name="of_toast_for_no_of_item">of</string>
    <string name="that_s_all_folks">~~~ That`s all folks! ~~~</string>
    <string name="rating_out_of_5">Rating: %1$d/5</string>
    <string name="reviewed_by">Review By %1$s</string>
    <string name="empty_product_catalog">Sorry no products found !</string>
    <string name="no_order_placed">No order placed!</string>
    <string name="try_different_category_or_search_keyword_maybe">Try different category or search keyword maybe … ?</string>
    <string name="empty_notification">You don\'t have any notification !</string>
    <string name="visit_later_to_check_your_notification">Visit later to check your notifications</string>
    <string name="empty_bag">Your bag is empty !!!</string>
    <string name="add_item_to_your_bag_now">Add item to your bag now</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="congrats">Congrats…</string>
    <string name="hint_prompt">Speak an item name</string>
    <string name="related_products">Related Products</string>
    <string name="all_orders">All Orders</string>
    <string name="my_order">My Order</string>
    <string name="you_have_not_placed_any_orders_yet">You have not placed any orders yet</string>
    <string name="order_no">Order #</string>
    <string name="date">Date</string>
    <string name="order_total">Order Total</string>
    <string name="status">Status</string>
    <string name="wishlist">Wishlist</string>
    <string name="fingerprint_login">FingerPrint Login</string>
    <string name="recent_view_products">Recently Viewed Products</string>
    <string name="phone">Phone</string>
    <string name="search_products">Search products</string>
</resources>