<!-- -Menu used in Mobikul-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.HomeActivity">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_vector_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_item_wishlist"
        android:icon="@drawable/ic_vector_wishlist_white_24dp"
        android:title="@string/wishlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_bag"
        android:icon="@drawable/ic_cart_layer"
        android:title="@string/bag"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/menu_item_theme"-->
<!--        android:title="@string/theme"-->
<!--        app:showAsAction="never"/>-->

</menu>