<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.yosefmoq.odoo.helper.AppSharedPref" />

        <variable
            name="handler"
            type="com.yosefmoq.odoo.handler.generic.SignInSignUpActivityHandler" />
    </data>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@drawable/login_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_generic"
                android:text="@string/use_email_address"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_normal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_small"
                    android:layout_marginEnd="@dimen/spacing_generic"
                    android:layout_marginRight="@dimen/spacing_generic"
                    android:layout_weight="1"
                    android:onClick="@{()->handler.login()}"
                    android:text="@string/login"
                    android:textAllCaps="true" />


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_small"
                    android:layout_marginLeft="@dimen/spacing_generic"
                    android:layout_marginStart="@dimen/spacing_generic"
                    android:layout_weight="1"
                    android:onClick="@{()->handler.signUp()}"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    app:visibility="@{AppSharedPref.isAllowedSignup(context)}" />


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:onClick="@{()->handler.fingerprintLogin()}"
                android:text="@string/fingerprint_login"
                android:textAllCaps="true"
                app:visibility="@{AppSharedPref.getIsAllowedFingerprintLogin(context)}" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="@{()->handler.closeActivity()}"
            android:padding="@dimen/spacing_generic"
            app:srcCompat="@drawable/ic_action_navigation_close"
            app:visibility="@{AppSharedPref.isAllowedGuestCheckout(context)}"
            tools:ignore="ContentDescription" />

    </FrameLayout>


</layout>
