<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.yosefmoq.odoo.model.customer.signin.SignInForgetPasswordData" />

        <variable
            name="handler"
            type="com.yosefmoq.odoo.handler.customer.ForgotPasswordDialogHandler" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_generic"
            android:text="@string/forgot_your_password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_generic"
            android:text="@string/please_enter_your_email_address_below_you_will_receive_a_link_to_reset_your_password_" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_generic"
            android:text="@string/phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="@dimen/spacing_generic"
                app:srcCompat="@drawable/ic_baseline_local_phone_24" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="+970"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="50dp"
                        android:paddingEnd="50dp"
                        android:hint="ex: 592471020"
                        android:maxLength="9"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:text="@={data.phone}" />

                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>


        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->handler.forgetPassword()}"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@android:string/ok"
                android:textColor="?attr/colorAccent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->handler.dismissDialog()}"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@android:string/cancel"
                android:textColor="?attr/colorAccent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>