<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.yosefmoq.odoo.model.home.HomePageResponse" />

    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient9"
            android:clickable="false">

            <!--
            <kr.pe.burt.android.lib.androidgradientimageview.AndroidGradientImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:giv_x="0.0"
                app:giv_y="0.0"
                app:giv_rotate="45.0"
                app:giv_startColor="@color/pink"
                app:giv_startOffset="0.1"
                app:giv_middleColor="@color/white_smoke"
                app:giv_middleOffset="0.4"
                app:giv_endColor="@color/baby_blue"
                app:giv_endOffset="0.9"
                />
-->


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_app_without_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"

            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="vertical">


                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivNotification"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="16dp"
                            android:clickable="true"
                            android:padding="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/notification"
                            app:tint="@color/white" />

                        <ImageView
                            android:id="@+id/ivFilter"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:padding="8dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/filter" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginHorizontal="80dp"
                            app:cardCornerRadius="8dp"
                            android:clickable="false"
                            android:visibility="invisible"
                            app:cardElevation="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/clSearch"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <EditText
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:background="@null"
                                    android:drawableEnd="@drawable/ic_vector_search_white_24dp"
                                    android:drawablePadding="16dp"
                                    android:enabled="false"
                                    android:visibility="invisible"
                                    android:hint="@string/search_products"
                                    android:queryHint="@string/phone"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="8dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:srcCompat="@drawable/ic_camera" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="8dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/featured_categories_rv"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@drawable/bg_recycler"
                                android:nestedScrollingEnabled="false"
                                android:orientation="horizontal"
                                android:visibility="@{data.featuredCategories.empty ? View.GONE : View.VISIBLE}"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                                tools:listitem="@layout/item_featured_category"
                                tools:targetApi="lollipop" />
                        </androidx.cardview.widget.CardView>

                        <!--BANNER SLIDERS-->

                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/banner_view_pager"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/banner_size_generic"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:paddingStart="@dimen/spacing_generic"
                            android:paddingLeft="@dimen/spacing_generic"
                            android:paddingEnd="@dimen/spacing_generic"
                            android:paddingRight="@dimen/spacing_generic"
                            android:scaleType="fitCenter"
                            android:visibility="@{data.bannerImages.empty? View.GONE : View.VISIBLE}"
                            app:layout_constraintTop_toBottomOf="@+id/card_view"
                            tools:background="@color/badge_background_color"
                            tools:ignore="UnusedAttribute" />

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/banner_dots_tab_layout"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/tab_dot_switcher_height"
                            android:visibility="@{data.bannerImages.empty? View.GONE : View.VISIBLE}"
                            app:layout_constraintTop_toBottomOf="@+id/banner_view_pager"
                            app:tabBackground="@drawable/selector_dots_tab_layout"
                            app:tabGravity="center"
                            app:tabIndicatorHeight="0dp"
                            app:tabPaddingEnd="@dimen/spacing_generic"
                            app:tabPaddingStart="@dimen/spacing_generic"
                            tools:background="@color/bb_tabletRightBorderDark" />

                        <!--PRODUCT SLIDERS-->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/product_slider_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toBottomOf="@id/banner_view_pager" />


                        <LinearLayout
                            android:id="@+id/llRecentViewProducts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toBottomOf="@id/product_slider_container">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/spacing_normal"
                                android:paddingBottom="@dimen/spacing_tiny"
                                android:text="@string/recent_view_products"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textStyle="bold" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rvAlternativeProduct"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintGuide_percent="0.35" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.core.widget.NestedScrollView>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_progress_drawable"
            app:visibility="@{data == null}" />

    </FrameLayout>


</layout>
